--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ indent-style = "space"
 name = "nekoweb"
 version = "0.1.0"
 description = "Nekoweb API wrapper"
-authors = ["TheCreatorrr333 <thecreatorrr333@gmail.com>"]
+authors = ["TheCreatorrr333"]
 license = "GPLv3"
 readme = "README.md"
 
@@ -16,6 +16,7 @@ readme = "README.md"
 python = ">=3.12,<3.13"
 requests = "^2.31.0"
 tcrutils = "^12.0.122"
+httpx = "^0.27.0"
 
 
 [build-system]
